k8s/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: go-web-app
  name: go-web-app
  #  namespace: go-web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-web-app
  template:
    metadata:
      labels:
        app: go-web-app
    spec:
      containers:
      - image: faisalmaliik/go-web-app:v3
        name: go-web-app
        ports:
          - containerPort: 8080
        resources:
          limits:
            cpu: "500m"          # 500 millicores (0.5 cores)
            memory: "256Mi"      # 256 MiB of memory
          requests:
            cpu: "250m"          # 250 millicores (0.25 cores)
            memory: "128Mi"      # 128 MiB of memory
