k8s/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-go-web-app
  # namespace: go-web-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx
  rules:
  - host: "faisalmalik.in"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: go-web-app-svc
            port:
              number: 80
